tests/rosetta/out/Pascal/calculating-the-value-of-e.error
fpc: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /tmp/calculating-the-value-of-e.pas
calculating-the-value-of-e.pas(50,14) Error: Identifier not found "_sliceString"
calculating-the-value-of-e.pas(51,15) Error: Identifier not found "_sliceString"
calculating-the-value-of-e.pas(93) Fatal: There were 2 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
